src/assets/stylesheets/deltacamp.css.scss
/* ... */
.tooltip {
  border-radius: 20px;
  font-size: 1.5rem;
  line-height: 1.5;
  max-width: 500px;
  padding: 30px 40px;
}

.tooltip strong {
  color: white;
}

.is-rounded img {
  border-radius: 100%;
}

.inline-icon {
  position: relative;
  top: 3px;
}

.is-bottom-marginless {
  margin-bottom: 0;
}

.is-light {
  color: lighten($link-color, 30%);
}

.subtitle-1,
.subtitle-2,
.subtitle-3 {
  position: relative;
  font-weight: 500;
  font-size: 1.5rem;
  text-transform: uppercase;

  > * {
    vertical-align: middle;
  }
}

$prefix-icon-width: 2rem;

.prefix-icon {
  width: $prefix-icon-width;
}

.prefix-icon-list {
  margin-left: $prefix-icon-width;
}

.subtitle-1 {
  color: $work-brand-color;
}

.subtitle-2 {
  color: darken($blueLight, 10%);
}

.prefix-icon.subtitle-2--icon {
  margin-top: 3px;
}

.color-orange {
  color: $orangeLight;
}

.background-image-container {
  background-color: rgba(200, 210, 220, 0.1);
  position: relative;
  overflow: hidden;
  z-index: 100;
}

img.background {
  position: absolute;
  min-width: 1000%;
  max-width: 10000%;
  min-height: 1000%;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%) scale(0.1);
}

.has-absolute-fullsize {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.no-margin-bottom {
  margin-bottom: 0;
}

ul.ul  {
  margin: 0;
  padding: 0 1em;
  list-style: none;
}

ul.ul li {
  margin-left: 1rem;
}

ul.ul li:before {
  content: "";
  border-color: $orangeLight transparent;
  border-style: solid;
  border-width: 0 0.25em 0.40em 0.25em;
  display: block;
  height: 0;
  width: 0;
  left: -1em;
  top: 0.875em;
  position: relative;
}

ul.ul li:nth-child(2)::before {
  border-color: $teal transparent;
}

ul.ul li:nth-child(3)::before {
  border-color: $pink transparent;
}

ul.ul li:nth-child(4)::before {
  border-color: $blueLight transparent;
}

ul.ul li:nth-child(5)::before {
  border-color: $purpleDark transparent;
}

.is-attention-grabby {
  animation: 'attention-grabby' 3s infinite ease-in !important;
}

@keyframes attention-grabby {
  0% {
    color: $danger;
  }
  40% {
    color: darken($blueLight, 10%);
  }
  70% {
    color: $purpleDark;
  }
  100% {
    color: $danger;
  }
}

.list-icon__circle {
  background-color: $purpleDark;
  border-radius: 50%;
  color: white;
  display: inline-flex;
  margin-right: 12px;
  position: relative;
  padding: 10px;
  top: 4px;
}

.is-background-blue {
  background-color: $blueLight;
}

.is-background-teal {
  background-color: $tealLight;
}

.is-background-pink {
  background-color: $pinkLight;
}

.is-background-orange {
  background-color: $orangeLight;
}

.icon-list li {
  margin: 0 0 1.5rem;
}

.fade-in {
  opacity: 0;
  transition: all 0ms ease-in-out;
}

.fade-in-entering {
  opacity: 1;
  transition: all 700ms ease-in-out;
}

.fade-in-exiting {
  opacity: 0;
}

